--- a/app/views/top_pages/top.html.erb
+++ b/app/views/top_pages/top.html.erb
@@ -1,1 +1,11 @@
-<button class="btn btn-accent btn-outline">Button</button>
+<div class="hero min-h-screen bg-base-200">
+  <div class="hero-content text-center">
+    <div class="max-w-md">
+      <h1 class="text-5xl font-bold">Hello okogoto!</h1>
+      <p class="py-6">トップページになる予定</p>
+      <%= link_to new_user_path do %>
+        <button class="btn btn-accent btn-outline rounded-full">ユーザー登録ページへ</button>
+      <% end %>
+    </div>
+  </div>
+</div>
