--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,7 +13,7 @@
         </div>
         <div class="form-control">
           <%= f.label :age, class: 'label' %>
-          <%= f.select :age, User.ages.to_a, {}, class: 'select select-bordered select-sm w-full max-w-xs mb-2' %>
+          <%= f.select :age, User.ages.keys, {}, class: 'select select-bordered select-sm w-full max-w-xs mb-2' %>
         </div>
         <div class="form-control space-x-2 space-y-2">
           <%= f.label :gender %>
