Add:フラッシュメッセージを追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,9 @@
   </head>
 
   <body>
-    <%= render "shared/header"%>
+    <%= render 'shared/header'%>
+    <%= render 'shared/flash_messages' %>
     <%= yield %>
-    <%= render "shared/footer"%>
+    <%= render 'shared/footer'%>
   </body>
 </html>
