--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
       <%= link_to 'みんなのオコゴトを見る', '#', class: 'btn btn-square btn-ghost whitespace-nowrap flex-auto' %>
       <%= link_to 'オコゴト画像を作成する', '#', class: 'btn btn-square btn-ghost whitespace-nowrap flex-1' %>
       <%= link_to 'マイページ', '#', class: 'btn btn-square btn-ghost whitespace-nowrap w-24' %>
-      <%= link_to t('defaults.logout'), logout_path, class: 'btn btn-square btn-ghost whitespace-nowrap w-24', data: { turbo_method: :delete } %>
+      <%= button_to t('defaults.logout'), logout_path, class: 'btn btn-square btn-ghost whitespace-nowrap w-24', method: :delete %>
     <% else %>
       <%= link_to t('defaults.login'), login_path, class: 'btn btn-square btn-ghost whitespace-nowrap w-24' %>
     <% end %>
