Fix:フッターのclassを変更

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
-<div class="btm-nav">
-  <%= link_to '利用規約', '#' %>
-  <%= link_to 'プライバシーポリシー', '#' %>
-  <%= link_to 'お問い合わせ', '#' %>
-</div>
+<footer class="footer p-5 bg-neutral text-neutral-content">
+  <%= link_to '利用規約', '#', class: 'link link-hover' %>
+  <%= link_to 'プライバシーポリシー', '#', class: 'link link-hover' %>
+  <%= link_to 'お問い合わせ', '#', class: 'link link-hover' %>
+</footer>
