--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="flex justify-center">
-  <div class="card w-96 bg-base-100 shadow-xl">
+  <div class="card w-96 bg-base-100 shadow-xl my-12">
     <div class="card-body">
       <%= t('.created_image') %>
       <%= image_tag @post.kogoto_image.url %>
