--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,8 +3,17 @@
     <!-- text - start -->
     <div class="mb-10 md:mb-16">
       <h2 class="mb-4 text-center text-2xl font-bold text-gray-800 md:mb-6 lg:text-3xl">みんなのオコゴト</h2>
+      <div class="form-control">
+        <div class="input-group justify-center">
+          <%= form_with scope: :search, url: posts_path, method: :get, local: true do |f| %>
+            <%= f.label :tag_id, t('defaults.search_tag'), class: 'label text-slate-500 text-sm' %>
+            <%= f.collection_select(:tag_id, @tags, :id, :situation, { prompt: t('.search_tag') }, { class: 'select select-bordered' }) %>
+            <%= f.submit 'Go', class: 'btn btn-square' %>
+          <% end %>
+        </div>
+      </div>
       <% if !@posts.present? %>
-        <p class="mx-auto max-w-screen-md text-center text-gray-500 md:text-lg"><%= t('.no_result') %></p>
+        <p class="mx-auto max-w-screen-md text-center text-gray-500 md:text-lg mt-20"><%= t('.no_result') %></p>
       <% end %>
     </div>
     <!-- text - end -->
