--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,7 +8,9 @@
           <%= form_with scope: :search, url: posts_path, method: :get, local: true do |f| %>
             <%= f.label :tag_id, t('defaults.search_tag'), class: 'label text-slate-500 text-sm' %>
             <%= f.collection_select(:tag_id, @tags, :id, :situation, { include_blank: t('.search_tag') }, { class: 'select select-bordered' }) %>
-            <%= f.submit 'Go', class: 'btn btn-square' %>
+            <%= f.button class: 'btn btn-square' do %>
+              <i class="fa-solid fa-magnifying-glass fa-lg"></i>
+            <% end %>
           <% end %>
         </div>
       </div>
