--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,7 +25,7 @@
         <%= button_to t('.delete'), post_path(@post),
                                   class: 'btn btn-outline whitespace-nowrap rounded-full text-center mt-2',
                                   method: :delete,
-                                  data: { turbo_confirm: '投稿を削除しますか？' } %>
+                                  data: { turbo_confirm: t('.delete_check') } %>
       <% end %>
     </div>
   </div>
