--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,7 @@
     <% if logged_in? %>
       <%= link_to 'みんなのオコゴトを見る', posts_path, class: 'btn btn-square btn-ghost whitespace-nowrap flex-auto' %>
       <%= link_to 'オコゴト画像を作成する', new_okogoto_image_path, class: 'btn btn-square btn-ghost whitespace-nowrap flex-1' %>
-      <%= link_to 'マイページ', '#', class: 'btn btn-square btn-ghost whitespace-nowrap w-24' %>
+      <%= link_to 'マイページ', profile_path, class: 'btn btn-square btn-ghost whitespace-nowrap w-24' %>
       <%= button_to t('defaults.logout'), logout_path, class: 'btn btn-square btn-ghost whitespace-nowrap w-24', method: :delete %>
     <% else %>
       <%= link_to t('defaults.login'), login_path, class: 'btn btn-square btn-ghost whitespace-nowrap w-24' %>
