--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,5 +1,5 @@
 <% if object.errors.any? %>
-  <div id="error_explanation" class="alert alert-error shadow-md">
+  <div id="error_explanation" class="alert alert-error shadow-md mb-4">
     <ul class="flex flex-col mb-0">
       <% object.errors.each do |error| %>
         <li><%= error.full_message %></li>
