--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -27,6 +27,14 @@
         <h3 class="text-2xl text-sky-600 whitespace-nowrap ml-6"><%= @user.gender_i18n %></h3>
       </div>
     </div>
+    <div class="flex md:w-1/3 w-full sm:flex-row flex-col mx-auto px-8 sm:space-x-4 sm:space-y-0 space-y-4 sm:px-0 py-2 items-end">
+      <div class="relative flex-grow w-full">
+        <h3 class="text-md text-sky-600 whitespace-nowrap ml-4"><%= User.human_attribute_name('email') %></h3>
+      </div>
+      <div class="relative flex-grow w-full">
+        <h3 class="text-2xl text-sky-600 whitespace-nowrap ml-6"><%= @user.email %></h3>
+      </div>
+    </div>
     <div class="flex justify-center mt-4">
       <%= link_to t('.edit_profile'), edit_profile_path, class: 'btn rounded-full' %>
     </div>
