--- a/app/views/okogoto_images/new.html.erb
+++ b/app/views/okogoto_images/new.html.erb
@@ -4,10 +4,9 @@
       <div class="card-body">
         <h1 class="card-title justify-center"><%= t('.title') %></h1>
         <%= form_with url: okogoto_images_path, local: true, class: 'flex-col' do |f| %>
-          <div class="form-control">
           <div class="form-control mb-4">
             <%= f.label t('.okogoto'), class: 'label' %>
-            <%= f.text_area :okogoto, class: 'textarea textarea-bordered', placeholder: '70文字以内でオコゴトを入力', maxlength: '70' %>
+            <%= f.text_area :okogoto, class: 'textarea textarea-bordered', placeholder: '70文字以内で入力してください（ 70文字以上入力されません ）', maxlength: '70' %>
           </div>
           <div class="form-control space-x-2 space-y-2">
             <%= f.label t('.image') %>
