--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,12 +18,14 @@
         <p class="mx-auto max-w-screen-md text-center text-gray-500 md:text-lg mt-20"><%= t('.no_result') %></p>
       <% end %>
     </div>
-    <!-- text - end -->
-
     <div class="grid gap-6 sm:grid-cols-2">
       <% if @posts.present? %>
         <%= render @posts %>
       <% end %>
+    </div>
+    <div class="flex justify-center mt-4">
+      <%= link_to_prev_page @posts, t('defaults.previous'), class: 'inline-flex items-center px-4 py-2 mr-3 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white' %>
+      <%= link_to_next_page @posts, t('defaults.next'), class: 'inline-flex items-center px-4 py-2 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white'%>
     </div>
   </div>
 </div>
